# Predators

./: .gitignore  CMakeLists.txt  README.md  make_ios_project.sh  make_project.sh
assets/data/: achievement_definitions.json  card_data.json  cards.json  font.json  font_black.json  font_placeholder.json  particle_data.json  product_definitions.json  shop_product_data.json  tutorial_definitions.json
assets/data/credits/: credits.txt
assets/data/privacy_policy/: privacy_policy.txt
assets/data/release_notes/: release_notes.txt
assets/data/scene_descriptors/: achievements_scene.json  battle_history_scene.json  battle_scene.json  battle_settings_scene.json  bunny_hop_scene.json  card_inspection_scene.json  card_pack_reward_scene.json  card_selection_reward_scene.json  cloud_data_confirmation_scene.json  credits_scene.json  defeat_scene.json  disconnected_scene.json  event_scene.json  first_game_lock_scene.json  gift_code_claim_scene.json  inventory_scene.json  loading_scene.json  main_menu_scene.json  permanent_board_scene.json  privacy_policy_scene.json  purchasing_product_scene.json  release_notes_scene.json  settings_scene.json  shop_scene.json  stats_scene.json  story_cards_library_scene.json  story_cards_scene.json  story_map_scene.json  unseen_spell_scene.json  victory_scene.json  wheel_of_fortune_scene.json
assets/music/: empty_music.flac  main_map_theme.flac  sfx_attack_heavy.flac  sfx_attack_light.flac  sfx_battle_end.flac  sfx_button_press.flac  sfx_card_play.flac  sfx_coins.flac  sfx_max_health_gain.flac  sfx_success.flac  sfx_visit_node.flac  tutorial_map_theme.flac  victory_theme.flac
assets/shaders/: achievement_container_entry.fs  achievement_portrait.fs  achievement_text_container_entry.fs  action_highlighter_perlin_noise.fs  animated_stat_container_base_object.fs  animated_stat_container_value_object.fs  artifact_container_entry.fs  artifact_single_use_icon_container_entry.fs  basic.fs  basic.vs  basic_custom_color.fs  board_side_stat_effect.fs  board_side_stat_effect.vs  card.fs  card_board_location_perlin_noise.fs  card_dissolve.fs  card_family_selection_swipe_entry.fs  card_family_stamp_library_entry.fs  card_highlighter_perlin_noise.fs  card_highlighter_perlin_noise.vs  card_history_entry.fs  card_interactive.inc  card_interactive_elements.fs  card_library_entry.fs  card_pack_golden.fs  card_reward.fs  card_spell_dissolve.fs  custom_alpha.fs  demon_punch.fs  diagonal_reveal.fs  fire.fs  fire_with_dissolve_line.fs  generic_dissolve.fs  generic_particle.fs  generic_particle.vs  generic_rare_item_dissolve.fs  generic_rare_item_particle.fs  golden_card.fs  loading_bar.fs  mutation_container_entry.fs  (+13 more)
assets/textures/shop_items/: Thumbs.db
assets/textures/wheel_of_fortune_items/: Thumbs.db
build_utils/: FindFreetype.cmake  FindSDL2.cmake  FindSDL2_image.cmake
prebuilt_mac/Predators/Predators.xcodeproj/: project.pbxproj
scripts/: create_cpp_class_files.sh  image_manip.py  sync_ios_project.rb  sync_mac_project.rb
source/: CMakeLists.txt  class2.hpp  main.cpp
source/engine/rendering/: Camera.cpp  Camera.h  Fonts.cpp  Fonts.h  OpenGL.h  OpenGLDesktopRenderer.cpp  OpenGLDesktopRenderer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLiOSRenderer.cpp  OpenGLiOSRenderer.h  RenderingContexts.cpp  RenderingContexts.h
source/engine/resloading/: MeshResource.cpp  MeshResource.h  OBJMeshLoader.h  ResourceLoadingService.cpp  ResourceLoadingService.h  ShaderLoader.cpp  ShaderLoader.h  TextureLoader.cpp  TextureLoader.h  TextureResource.h
source/engine/scene/: Scene.cpp  Scene.h  SceneObject.h
source/engine/utils/: Logging.h  MathUtils.cpp  MathUtils.h  StringUtils.h
source/game/: BoardState.cpp  BoardState.h  Game.cpp  Game.h
source/game/gameactions/: BaseGameAction.h  DrawCardGameAction.cpp  DrawCardGameAction.h  GameActionFactory.cpp  IdleGameAction.cpp  IdleGameAction.h  PlayCardGameAction.cpp
source/imgui/misc/fonts/: binary_to_compressed_c.cpp
source_apple_utilities/platform_utilities/: AVAudioPlayerManager.h  AVAudioPlayerManager.mm  AppleSoundUtils.h  AppleSoundUtils.mm  AppleUtils.h  AppleUtils.mm  BackgroundMusicPlayer.h  BackgroundMusicPlayer.mm  CloudKitUtils.h  CloudKitUtils.mm  Reachability.m  SfxPlayer.h  SfxPlayer.mm
source_common/: CMakeLists.txt  main.cpp
source_common/engine/: CoreSystemsEngine.h
source_common/game/: AchievementManager.cpp  AchievementManager.h  AnimatedButton.cpp  AnimatedButton.h  AnimatedStatContainer.cpp  AnimatedStatContainer.h  AnimatedStatCrystal.cpp  AnimatedStatCrystal.h  ArtifactProductIds.h  BaseDataFileSerializer.cpp  BaseDataFileSerializer.h  BattleSceneLogicManager.cpp  BattleSceneLogicManager.h  BattleSerializer.cpp  BattleSerializer.h  BoardState.h  CardEffectComponents.h  CardTooltipController.cpp  CardUtils.cpp  CardUtils.h  Cards.cpp  Cards.h  DataRepository.cpp  DataRepository.h  Game.cpp  Game.h  GameConstants.h  GameReplayEngine.cpp  GameReplayEngine.h  GameRuleEngine.cpp  GameRuleEngine.h  GameSceneTransitionManager.cpp  GameSceneTransitionManager.h  GameSerializer.cpp  GameSerializer.h  GameSessionManager.cpp  GameSessionManager.h  GameSymbolicGlyphNames.h  GuiObjectManager.cpp  GuiObjectManager.h  (+17 more)
source_common/imgui/: imgui.h
source_desktop/: CoreSystemsEnginePlatformImpl.cpp  RendererPlatformImpl.cpp  RendererPlatformImpl.h
source_desktop/platform_specific/: CoreSystemsEnginePlatformImpl.cpp  InputStateManagerPlatformImpl.cpp  InputStateManagerPlatformImpl.h  RendererPlatformImpl.cpp  RendererPlatformImpl.h
source_ios/: CoreSystemsEnginePlatformImpl.cpp  RendererPlatformImpl.h
source_ios/platform_specific/: CoreSystemsEnginePlatformImpl.cpp  IOSUtils.mm  InputStateManagerPlatformImpl.cpp  InputStateManagerPlatformImpl.h  RendererPlatformImpl.cpp  RendererPlatformImpl.h
source_test/: CMakeLists.txt
source_test/game/: GameSceneTransitionManagerTest.cpp
source_windows_utilities/platform_utilities/: AppleUtils.h  WindowsUtils.cpp  WindowsUtils.h
test/: CMakeLists.txt  class-test.cpp  main.cpp
test/engine/scene/: SceneTest.cpp
test/game/gameactions/: GameActionTest.cpp
(+190 files in other folders)
